# proto3-column-storage

./: CMakeLists.txt  README.md  buffers.cpp  buffers.h  demo.cpp  field_writer.cpp  field_writer.h  proto_traits.h  record_decoder.cpp  record_decoder.h  serialization.cpp  serialization.h
.github/workflows/: main.yml
protos/: column.proto
tests/: buffer_test.cpp  buffers_test.cpp  field_writer_test.cpp  serialization_test.cpp  test.cpp  test.proto
